# bodywash

./: CHANGELOG.md  README.md  bodywash.cabal  bodywhash.cabal  config.dhall  flake.nix
app/: Main.hs
app/Bodywash/: Config.hs  State.hs
app/Bodywhash/: Config.hs  State.hs
