cabal-version:       3.0
name:                bodywash
version:             0.1.0.0
synopsis:            Discord bot
homepage:            https://github.com/chysi/bodywash
license:             Apache-2.0
license-file:        LICENCE.md
author:              chysi
maintainer:          cazim.hysi@gmail.com
bug-reports:         https://github.com/chysi/bodywash/issues
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/chysi/bodywash

common common
    default-language: GHC2021
    ghc-options:
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        ApplicativeDo
        BlockArguments
        Arrows
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        ExplicitNamespaces
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        RecursiveDo
        TypeFamilies
        ViewPatterns

executable bodywash
    import:           common
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:
        Bodywash.Config
        Bodywash.State
    ghc-options:      -O2 -threaded
    build-depends:
        base,
        containers,
        dhall,
        discord-haskell,
        generic-lens,
        lens,
        mtl,
        random,
        rhine,
        rhine-discord,
        text,
        time,